This file documents the revision history for mod_gearman.

1.3.4  not yet released
          - send_gearman: make timeout configurable
          - fixed killing worker on reload, worker now finishes current job
          - fixed potential problem on deinitializing epn

1.3.2  Sun May 27 11:39:55 CEST 2012
          - fixed problem with commands containing ENV definitions

1.3.0  Fri Apr 27 16:45:02 CEST 2012
          - fixed setting queues by custom variables

1.2.8  Thu Apr 12 13:37:20 CEST 2012
          - add new new option 'accept_clear_results'
          - added batch mode for gearman_top
          - added gearman_proxy to package
          - fixed problem when neb module is not reconnecting
          - fixed gearman path detection on source installations

1.2.6  Mon Mar 12 15:14:21 CET 2012
          - set worker queue by custom variable
          - disabled default max job age check
          - added docs in sample config about max-age
          - added usefull message when epn plugin does not call exit()
          - added new option dup_results_are_passive
          - fixed "Could Not Start Check In Time" problem

1.2.4  Mon Feb 27 23:54:39 CET 2012
          - fixed eventhandlers not being passed to worker
          - fixed shared memory not beeing cleaned on exit
          - internal changes to support freebsd

1.2.2  Tue Feb  7 18:06:02 CET 2012
          - orphaned hosts/services generate a fake result with useful error message
          - bypass eventhandler from hosts/services in local host/servicegroups
          - fixed NAGIOS_PLUGIN env in epn

1.2.0  Sun Jan  8 18:42:56 CET 2012
          - added embedded perl support (see README for details)
          - added uniq key option for check_gearman (kgovande)
          - added contrib folder
            - added Gearman-Proxy to syncronize jobserver
          - splitted default config in neb module and worker

1.1.1  Thu Nov 10 11:15:48 CET 2011